[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynetlogo-extended"
authors = [
    { name="Jan Kwakkel", email="j.h.kwakkel@tudelft.nl" },
]

maintainers = [
  { name = "C A Sheaffer", email = "contact@casheaffer.com" },
]

description = "Python link for dynamic interaction with NetLogo with extended API access for performance"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.8"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

version="6.4.0.0-dev1"

dependencies = [
    "pandas",
    "numpy",
    "jpype1"
]

[project.optional-dependencies]
docs = ["sphinx", "nbsphinx", "myst", "pyscaffold", "myst-parser"]

[project.urls]
"Homepage" = "https://github.com/quaquel/pyNetLogo"
"Documentation" = "https://pynetlogo.readthedocs.io"
"Bug Tracker" = "https://github.com/quaquel/pynetlogo/issues"

[tool.black]
line-length = 100

[tool.setuptools.package-data]
"pynetlogo.java" = ["**"]
